--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3001
+DATABASE_URL='postgresql://admin_postgres:Af9XADtcACHwlbYbI6rLElOGpZMDI6xg@dpg-ctb6tda3esus739f12j0-a.oregon-postgres.render.com/main_database_v9yr'
