--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express-validator": "^3.0.2",
     "@types/node": "^22.10.1",
     "@types/swagger-jsdoc": "^6.0.4",
+    "sequelize-cli": "^6.6.2",
     "typescript": "^5.7.2"
   }
 }
