--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "skipLibCheck": true,
     "types": ["node"],
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
   }
 }
