--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/express-validator": "^3.0.2",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
     "@types/swagger-jsdoc": "^6.0.4",
+    "jest": "^29.7.0",
     "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
   }
 }
