--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
+    "rootDir": "src",
     "outDir": "dist",
     "target": "es2016",
     "lib": ["ES6"],
     "module": "commonjs",
-    "rootDir": "src",
     "allowJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-  }
+    "typeRoots": ["node_modules/@types"],
+  },
+  "exclude": ["node_modules", "dist", "jest.config.ts"]
 }
